# filelock

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  README.rst  compose.yaml  filelock.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yaml  SECURITY.md  pull_request_template.md
.github/workflows/: check.yaml  check.yml  ci.yml  perf.yaml  prepare-release.yaml  publish.yaml  release.yaml  release.yml
docs/: Makefile  api.rst  changelog.rst  concepts.rst  conf.py  how-to.rst  index.rst  license.rst  make.bat  tutorials.rst
docs/_static/: custom.css
docs/changelog/: 593.bugfix.rst  594.bugfix.rst  596.bugfix.rst  597.bugfix.rst  614.bugfix.rst  615.bugfix.rst  617.bugfix.rst  618.feature.rst  619.feature.rst  620.feature.rst  621.bugfix.rst  622.feature.rst  623.doc.rst  624.feature.rst  625.feature.rst  626.packaging.rst  634.bugfix.rst  635.bugfix.rst  636.feature.rst  637.feature.rst  638.doc.rst  640.bugfix.rst  644.bugfix.rst  645.bugfix.rst  646.bugfix.rst  647.bugfix.rst  648.bugfix.rst  649.bugfix.rst  650.bugfix.rst  660.bugfix.rst  661.bugfix.rst  663.doc.rst  665.bugfix.rst  665.doc.rst  669.bugfix.rst  670.bugfix.rst  672.bugfix.1.rst  672.bugfix.2.rst  672.doc.rst  673.doc.rst  (+12 more)
docs/source/: conf.py  index.rst
example/: example.py
src/filelock/: __init__.py  _api.py  _async.py  _async_read_write.py  _descriptor.py  _error.py  _identity.py  _lease.py  _marker.py  _read_write.py  _soft.py  _strict.py  _unix.py  _util.py  _windows.py  asyncio.py
src/filelock/_soft_rw/: _async.py  _sync.py
src/filelock/asyncio/: __init__.py  _api.py
src/filelock/read_write/: __init__.py  _api.py  _wrapper.py
src/filelock/read_write/asyncio/: __init__.py  _api.py  _wrapper.py
tasks/: benchmark.py  capabilities.py  changelog.py  coverage_pragmas.py  deny_symlink.py  verify_filesystem.py
tasks/capability/: assert_fallback.py  sitecustomize.py
tasks/termux/: Dockerfile  run.sh
test-apps/: app1.py  app2.py
tests/: async_filelock_cancellation_helpers.py  capability_marks.py  conftest.py  fork_helpers.py  process_helpers.py  read_write_helpers.py  test_async_filelock.py  test_async_filelock_acquire_cancellation.py  test_async_filelock_release_cancellation.py  test_async_filelock_rollback_agnostic.py  test_async_filelock_runner_shutdown.py  test_async_filelock_transition_admission.py  test_async_read_write.py  test_async_read_write_cancellation.py  test_async_self_deadlock.py  test_async_soft_contracts.py  test_async_transition_gate.py  test_deadlock.py  test_default_mode.py  test_error.py  test_filelock.py  test_fork_backends.py  test_fork_coordination.py  test_fork_ownership.py  test_fork_registries.py  test_lifetime_validation.py  test_lock_expiry.py  test_marker_records.py  test_pr518_regression.py  test_process_identity.py  test_read_write.py  test_read_write_filelock.py  test_read_write_fork.py  test_read_write_unit.py  test_self_deadlock.py  test_soft_lease.py  test_soft_lifetime_warning.py  test_soft_stale.py  test_strict_soft.py  test_strict_soft_compat.py  (+11 more)
tests/soft_rw/: test_soft_rw_async.py  test_soft_rw_async_cancellation.py  test_soft_rw_sync.py
