[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.5",
  "hatchling>=1.28",
]

[project]
name = "filelock"
description = "A platform independent file lock."
readme = "README.md"
keywords = [
  "application",
  "cache",
  "directory",
  "log",
  "user",
]
license = "MIT"
maintainers = [
  { name = "Bernát Gábor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: System",
]
dynamic = [
  "version",
]
urls.Documentation = "https://py-filelock.readthedocs.io"
urls.Homepage = "https://github.com/tox-dev/py-filelock"
urls.Source = "https://github.com/tox-dev/py-filelock"
urls.Tracker = "https://github.com/tox-dev/py-filelock/issues"

[dependency-groups]
dev = [
  { include-group = "coverage" },
  { include-group = "docs" },
  { include-group = "fix" },
  { include-group = "pkg-meta" },
  { include-group = "release" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "covdefaults>=2.3",
  "diff-cover>=10.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
  "pytest-timeout>=2.4",
  "virtualenv>=20.36.1",
]
type = [
  "ty>=0.0.16",
  { include-group = "docs" },
  { include-group = "release" },
  { include-group = "test" },
]
docs = [
  "furo>=2025.12.19",
  "sphinx>=9.1",
  "sphinx-autodoc-typehints>=3.6.2",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-sitemap>=2.6",
  "sphinxcontrib-mermaid>=0.9.5",
  "sphinxext-opengraph>=0.10.2",
]
coverage = [
  "covdefaults>=2.3",
  "coverage[toml]>=7.13.4",
  "diff-cover>=10.2",
]
fix = [
  "pre-commit-uv>=4.2",
]
pkg-meta = [
  "check-wheel-contents>=0.6.3",
  "twine>=6.2",
  "uv>=0.10.2",
]
release = [
  "gitpython>=3.1.46",
  "pygithub>=2.8.1",
  "pyyaml>=6.0.3",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/filelock/version.py"
build.targets.sdist.include = [
  "/src",
  "/tests",
  "/tox.toml",
]
version.source = "vcs"

[tool.ruff]
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D205",   # 1 blank line required between summary line and description
  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "D301",   # Use `r"""` if any backslashes in a docstring
  "D401",   # First line of docstring should be in imperative mood
  "DOC",    # no support yet
  "ISC001", # Conflict with formatter
  "RUF067", # `__init__` module should only contain docstrings and re-exports
  "S104",   # Possible binding to all interface
]
lint.per-file-ignores."tasks/**/*.py" = [
  "D",      # don't care about documentation in tasks scripts
  "INP001", # no implicit namespace
  "S603",   # `subprocess` call: check for execution of untrusted input
  "T201",   # print allowed in scripts
]
lint.per-file-ignores."tests/**/*.py" = [
  "BLE001",  # blind exception catching acceptable in test helpers
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "N806",    # variable in function should be lowercase
  "PLC0415", # import should be at top-level
  "PLC2701", # private name import from external module
  "PLR0913", # too many arguments in function definition
  "PLR0917", # too many positional arguments
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S101",    # asserts allowed in tests
  "S603",    # `subprocess` call: check for execution of untrusted input
  "SLF001",  # accessing private members acceptable in tests
]
lint.isort = { known-first-party = [
  "filelock",
], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
count = true
quiet-level = 3
ignore-words-list = "master"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
ini_options.asyncio_default_fixture_loop_scope = "session"
ini_options.testpaths = [
  "tests",
]
ini_options.timeout = 20
ini_options.verbosity_assertions = 2
ini_options.filterwarnings = [
  "error",
  "ignore:unclosed database in <sqlite3.Connection object at:ResourceWarning",
  "ignore:unclosed file <_io.TextIOWrapper:ResourceWarning",
]

[tool.coverage]
run.concurrency = [
  "multiprocessing",
  "thread",
]
run.parallel = true
run.plugins = [
  "covdefaults",
]
run.sigterm = true
paths.other = [
  ".",
  "*/filelock",
  "*\\filelock",
]
paths.source = [
  "src",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 76
html.show_contexts = true
html.skip_covered = false

[tool.ty]
environment.python-version = "3.14"
src.exclude = []
