[metadata]
name = filelock
description = A platform independent file lock.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/py-filelock
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = Unlicense
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: System
download_url = https://github.com/tox-dev/py-filelock/archive/main.zip
project_urls =
    Source=https://github.com/tox-dev/py-filelock
    Tracker=https://github.com/tox-dev/py-filelock/issues

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
docs =
    furo>=2021.8.17b43
    sphinx>=4.1
    sphinx-autodoc-typehints>=1.12
testing =
    covdefaults>=2
    pytest>=6
    pytest-cov>=3
    pytest-timeout>=1.4.2

[options.package_data]
filelock = py.typed

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
source =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:report]
fail_under = 88

[coverage:html]
show_contexts = true
skip_covered = false
