[metadata]
name = filelock
description = A platform independent file lock.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/py-filelock
author = Benedikt Schmitt
author_email = benedikt@benediktschmitt.de
license = Unlicense
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: System
download_url = https://github.com/tox-dev/py-filelock/archive/main.zip
project_urls =
    Source=https://github.com/tox-dev/py-filelock
    Tracker=https://github.com/tox-dev/py-filelock/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
docs =
    furo>=2022.9.29
    sphinx>=5.3
    sphinx-autodoc-typehints>=1.19.5
testing =
    covdefaults>=2.2.2
    coverage>=6.5
    pytest>=7.2
    pytest-cov>=4
    pytest-timeout>=2.1

[options.package_data]
filelock = py.typed

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src
other =
    .
    */py-filelock
    *\py-filelock

[coverage:report]
fail_under = 88

[coverage:html]
show_contexts = true
skip_covered = false

[coverage:covdefaults]
subtract_omit = */.tox/*
